--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -168,6 +168,7 @@
   border: none;
   max-width: 290px;
   overflow: hidden;
+  text-transform: none;
 }
 .project-name-container {
   border: 30px solid #faf8f9;
