--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -38,7 +38,15 @@
       background-size: cover;
       background-repeat: no-repeat;
       height: 145px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
+      i {
+        font-size: 40px;
+        color: white;
+        font-weight: 600;
+      }
       .theme-big-text {
         margin: 0;
         padding: 0 !important;
