--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -90,12 +90,14 @@ footer {
 
         .email {
           margin-left: 15px;
+          cursor:pointer;
         }
       }
       i {
         font-size: 20px;
         font-weight: 900;
         color: #f82462;
+        cursor: pointer;
 
         &:first-child {
           margin-right: 30px;
