CRT issues solved

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -29,9 +29,10 @@ button:focus, button:active {
 
 button:disabled,
 button[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
+  //border: 1px solid #999999;
+  //background-color: #cccccc;
+  //color: #666666;
+  opacity: 0.5;
 }
 
 .theme-btn-secondery {
