--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -274,8 +274,8 @@
   }
 
   .gear-right-container {
-    width: 280px;
-    border: 5px solid lightgray;
+    width: 295px;
+    border: 10px solid #faf8f9;
     padding: 5px 15px;
 
     & > * {
