--- a/src/scss/pages/privacy-policy.scss
+++ b/src/scss/pages/privacy-policy.scss
@@ -1,5 +1,15 @@
+.privacy-policy-head {
+  h2 {
+    font-family: Gotham Pro;
+    font-size: 49px;
+    line-height: 47px;
+    text-align: center;
+    margin: 120px 0;
+  }
+}
+
 .privacy-policy-body {
-  font-size: 20px;
+  font-size: 14px;
   line-height: 1.7;
 
   ul {
@@ -8,7 +18,6 @@
     margin-bottom: 15px;
 
     li {
-      font-size: 20px !important;
       margin: 15px 0;
       line-height: 1.7;
       display: list-item;
@@ -28,12 +37,13 @@
     }
   }
   h4 {
-    margin: 2rem 0 1rem;
+    margin: 4rem 0 1rem;
+    font-size: 14px;
   }
 }
 
 .terms-conditions-body {
-  font-size: 20px;
+  font-size: 14px;
   line-height: 1.7;
 
   ul {
@@ -42,7 +52,7 @@
     list-style: none;
 
     li {
-      font-size: 20px !important;
+      font-size: 14px !important;
       margin: 15px 0;
       line-height: 1.7;
       display: list-item;
@@ -50,5 +60,12 @@
   }
   h4 {
     margin: 2rem 0 1rem;
+    font-size: 14px;
+  }
+}
+
+.privacy-modal {
+  h4 {
+    margin-top: 35px;
   }
 }
