--- a/src/scss/components/custom-autosuggest.scss
+++ b/src/scss/components/custom-autosuggest.scss
@@ -42,12 +42,13 @@
 .react-autosuggest__input {
   width: 100%;
   height: 34px;
-  padding: 7px 15px 5px;
+  padding: 0 15px;
   font-family: Helvetica, sans-serif;
   font-weight: 300;
   font-size: 16px;
   border: none;
   margin: 0 !important;
+  line-height: 2;
 
   &::placeholder {
     font-size: 14px;
