payment pages rebuild

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,7 @@
 @import 'pages/register';
 @import 'pages/dashboard';
 @import 'pages/dashboard/order-history';
+@import 'pages/dashboard/payment-dashboard';
 @import 'pages/addgear';
 @import 'pages/viewgear';
 @import 'pages/cart';
