--- a/src/scss/pages/dashboard/payment-dashboard.scss
+++ b/src/scss/pages/dashboard/payment-dashboard.scss
@@ -66,11 +66,12 @@
       font-weight: 600;
     }
     .payment-dashboard-body {
-      padding: 26px;
+      padding: 5%;
       display: flex;
+      justify-content: space-between;
 
       .card-body {
-        width: 48%;
+        width: 47.5%;
         background-color: #f7f7f7;
         border: none;
         font-family: Gotham Pro;
@@ -79,6 +80,8 @@
         letter-spacing: 0.03em;
         color: #3A3A3A;
         padding: 17px !important;
+        margin-bottom: 26px;
+        flex: none;
 
         .payment-card {
           display: flex;
@@ -102,7 +105,7 @@
             font-family: Gotham Pro;
             font-size: 18px;
             line-height: 25px;
-            letter-spacing: 0.18em;
+            letter-spacing: 0.15em;
             text-transform: uppercase;
             color: #252525;
             text-align: left;
@@ -140,6 +143,7 @@
         background-color: white;
         background-image: none;
         cursor: pointer;
+        min-height: 175px;
 
         .add-new-card {
           display: flex;
@@ -243,9 +247,27 @@
         }
         .left-button {
           content: '<';
+          border-radius: 50%;
+          width: 25px;
+          height: 25px;
+          justify-content: center;
+          align-items: center;
+          display: flex;
+          &:hover {
+            background: #e0e0e0;
+          }
         }
         .right-button {
           content: '>';
+          border-radius: 50%;
+          width: 25px;
+          height: 25px;
+          justify-content: center;
+          align-items: center;
+          display: flex;
+          &:hover {
+            background: #e0e0e0;
+          }
         }
         .month-year {
           font-family: Gotham Pro;
@@ -265,6 +287,15 @@
           background: #FBFBFB;
           border-top: solid 1px #f6f6f6;
           border-bottom: solid 1px #f6f6f6;
+          font-family: Gotham Pro;
+          font-size: 14px;
+          line-height: 17px;
+          letter-spacing: 0.03em;
+          color: rgba(58, 58, 58, 0.5);
+
+          th {
+            font-weight: 400;
+          }
         }
         tbody {
           font-family: Gotham Pro;
@@ -272,6 +303,16 @@
           line-height: 19px;
           letter-spacing: 0.03em;
           color: #3A3A3A;
+
+          .amount {
+            font-weight: 600;
+            color: #252525;
+          }
+          .invoice {
+            color: #f82462;
+            text-decoration: underline;
+            cursor: pointer;
+          }
         }
       }
     }
@@ -374,11 +415,9 @@
         cursor: pointer;
       }
     }
-  }
 
-  .method-select-button-wrapper {
-    margin-top: 20px;
-    .swift-btn {
+    .add-method-btn {
+      margin-top: 20px;
       width: 190px;
       height: 45px;
       font-size: 16px;
