--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -77,6 +77,9 @@
           display: flex;
           align-items: center;
         }
+        .views .nav-link {
+          cursor: pointer;
+        }
 
         margin-bottom: 20px;
       }
