--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,6 +9,7 @@ body {
   font-family: 'Helvetica Neue', sans-serif;
   color: $secondary-color;
   font-size: 16px;
+  zoom: 0.9;
 }
 
 a, a:hover {
