--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -26,6 +26,46 @@
     text-align: left;
     font-family: Helvetica Neue, sans-serif;
 
+    .owner-top-info.buyer-info {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom: solid 1px #F0F0F0;
+      padding-bottom: 50px;
+
+      .owner-info-inner-wrapper {
+        display: flex;
+
+        .buyer-info-left {
+          margin-right: 30px;
+          .owner-profile {
+            display: flex;
+            img {
+              width: 36px;
+              height: 36px;
+              margin-right: 15px;
+            }
+            .phone-number {
+              font-size: 16px;
+              line-height: 28px;
+              color: #252525;
+              font-weight: 600;
+            }
+          }
+        }
+        .phone-number {
+          line-height: 28px;
+          font-weight: 600;
+        }
+        .grey-small-text {
+          margin-bottom: 8px;
+          font-size: 12px;
+          line-height: 18px;
+          letter-spacing: 0.03em;
+          color: #B1B1B1;
+        }
+      }
+    }
     .paid-items {
       .paid-item {
         justify-content: space-between;
@@ -41,15 +81,6 @@
           color: #252525;
           .brand-model {
             font-weight: 600;
-          }
-        }
-        .buyer-info {
-          .phone-number {
-            line-height: 28px;
-            font-weight: 600;
-          }
-          .buyer-info-left .grey-small-text {
-            margin-bottom: 8px;
           }
         }
         .payment-info {
