--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -26,46 +26,6 @@
     text-align: left;
     font-family: Helvetica Neue, sans-serif;
 
-    .owner-top-info.buyer-info {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-bottom: solid 1px #F0F0F0;
-      padding-bottom: 50px;
-
-      .owner-info-inner-wrapper {
-        display: flex;
-
-        .buyer-info-left {
-          margin-right: 30px;
-          .owner-profile {
-            display: flex;
-            img {
-              width: 36px;
-              height: 36px;
-              margin-right: 15px;
-            }
-            .phone-number {
-              font-size: 16px;
-              line-height: 28px;
-              color: #252525;
-              font-weight: 600;
-            }
-          }
-        }
-        .phone-number {
-          line-height: 28px;
-          font-weight: 600;
-        }
-        .grey-small-text {
-          margin-bottom: 8px;
-          font-size: 12px;
-          line-height: 18px;
-          letter-spacing: 0.03em;
-          color: #B1B1B1;
-        }
-      }
-    }
     .paid-items {
       .paid-item {
         justify-content: space-between;
@@ -100,12 +60,12 @@
         line-height: 18px;
         letter-spacing: 0.03em;
         color: #B1B1B1;
+        margin-bottom: 10px;
       }
       .rating-select-container {
         width: 50%;
-        display: flex;
-        align-items: flex-end;
         padding-left: 10%;
+        padding-right: 10%;
 
         .rating-select-inner {
           display: block;
@@ -118,12 +78,54 @@
             text-transform: uppercase;
             color: rgba(37, 37, 37, 0.5);
           }
+          .rating-select-bottom-1 {
+            margin: 15px 0;
+          }
           .rating-select-bottom {
+            display: flex;
+            justify-content: space-between;
+
             & > div {
               padding: 13px 0;
               width: 100%;
               display: flex;
               justify-content: space-between;
+            }
+            button {
+              padding: 8px;
+              background-color: white;
+              width: unset;
+              font-weight: normal;
+              margin: 0 !important;
+              font-size: 15px;
+            }
+            .status-new-btn {
+              color: #1CDB74;
+              border: solid 1px #1CDB74;
+            }
+            .status-worn-btn {
+              border: 1px solid #FBE3D9;
+              color: #FC7840;
+            }
+            .status-damaged-btn {
+              border: 1px solid #F9DADA;
+              color: #F65252;
+            }
+            .active-btn {
+              background-color: #1CDB74;
+              border: solid 1px #1CDB74;
+              color: white;
+            }
+          }
+          .react__star__rating__lite {
+            width: 70%;
+            .react__star__rating__lite__stars {
+              display: flex;
+              justify-content: flex-end;
+              span {
+                padding: 5px;
+                cursor: pointer;
+              }
             }
           }
         }
@@ -143,6 +145,8 @@
           button {
             width: 100%;
             font-weight: 600;
+            padding: 5px;
+
             &:first-child {
               margin-bottom: 20px;
             }
@@ -173,10 +177,37 @@
             margin-bottom: 17px;
             color: #DBA61C !important;
           }
-          .warning-btn:hover {
-            //color: white !important;
-            //background-color: #F82462;
-            //border: solid 1px #F82462;
+        }
+      }
+
+      .owner-info-wrapper {
+        .buyer-info {
+          margin: 0;
+        }
+        .renter-rating-container {
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          padding: 0 10% 0 10%;
+
+          & > div {
+            display: flex;
+            justify-content: space-between;
+            
+            .react__star__rating__lite {
+              width: 70%;
+              .react__star__rating__lite__stars {
+                display: flex;
+                justify-content: flex-end;
+                span {
+                  cursor: pointer;
+                }
+              }
+            }
+          }
+          .owner-rating-btn {
+            margin-top: 10px;
           }
         }
       }
@@ -234,11 +265,28 @@
         text-transform: uppercase;
         background-color: #1CDB74;
         color: #FFFFFF;
+        font-weight: 600;
+
+        &.warning-btn {
+          background-color: #FBF6E8;
+          color: #DBA61C;
+        }
       }
       .checkout-amount {
         margin-top: 10px;
         padding-top: 10px;
         border-top: 1px solid lightgray;
+      }
+    }
+    .payment-status-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      & > div {
+        height: 42%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
       }
     }
   }
@@ -400,12 +448,50 @@
             margin-bottom: 17px;
             color: #DBA61C !important;
           }
-          .warning-btn:hover {
-            //color: white !important;
-            //background-color: #F82462;
-            //border: solid 1px #F82462;
-          }
         }
+      }
+    }
+  }
+}
+
+.order-history-outer-wrapper {
+  background-color: #faf8f9;
+  padding-top: 40px;
+  .tab-content {
+    padding: 0;
+  }
+  .empety-list {
+    text-align: center;
+  }
+  .new-order-count {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    border-radius: 15px;
+    background-color: #f82462;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    margin-left: 176px;
+    margin-top: -43px
+  }
+}
+
+@media (max-width: 1179px) {
+  .order-history-outer-wrapper {
+    padding: 0;
+    .tab-content {
+      padding: 0;
+    }
+  }
+  .order-modal {
+    .payment-success-info {
+      padding: 15px;
+      border: 18px solid #FAF8F9;
+
+      .payment-card {
+        width: 100% !important;
       }
     }
   }
@@ -569,6 +655,7 @@
         }
         .payment-status-container {
           padding: 0px 20%;
+
           .payment-status {
             padding: 5px 10px;
             font-family: Gotham Pro;
@@ -579,7 +666,15 @@
             text-transform: uppercase;
             background-color: #1CDB74;
             color: #FFFFFF;
+
+            &.warning-btn {
+              background-color: #FBF6E8;
+              color: #DBA61C;
+            }
           }
+        }
+        .payment-status-wrapper {
+          padding: 25px 20%;
         }
         .payment-result {
           .checkout-total {
@@ -629,7 +724,7 @@
       width: 100%;
       padding:35px;
       background-color: white;
-      border-top:1px solid #faf8f9;
+      border-top: 1px solid #faf8f9;
     }
     .order-modal-footer {
       border-top: 1px solid #f3f3f3;
