--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -14,13 +14,13 @@
 }
 
 .auth-container {
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   width: 100%;
   padding: 0;
-  height: 100vh;
   align-items: stretch;
 
   .login-form-wrapper span {
