--- a/src/scss/pages/dashboard/payment-dashboard.scss
+++ b/src/scss/pages/dashboard/payment-dashboard.scss
@@ -39,7 +39,7 @@
       color: #252525;
       text-align: left;
       font-weight: 600;
-      margin: 15px 0 30px;
+      margin: 15px 0 20px;
 
       &:first-child {
         display: flex;
@@ -70,7 +70,7 @@
   background-color: white;
   background-image: none;
   cursor: pointer;
-  min-height: 175px;
+  min-height: 165px;
   max-width: 50%;
 
   .add-new-card {
@@ -141,6 +141,9 @@
     align-items: center;
     margin-bottom: 20px;
 
+    h4 {
+      text-transform: none !important;
+    }
     .balance-wrapper {
       display: flex;
       width: 374px;
